# cppbackend

.github/workflows/: main.yml
pr_1_sprint/src/: main.cpp  model.cpp  request_handler.h
sprint1/problems/async_server/precode/: CMakeLists.txt
sprint1/problems/async_server/precode/src/: http_server.cpp  http_server.h  main.cpp
sprint1/problems/async_server/solution/: CMakeLists.txt
sprint1/problems/async_server/solution/src/: http_server.cpp  main.cpp
sprint1/problems/cafeteria/solution/: CMakeLists.txt  README.md
sprint1/problems/final_task/solution/: CMakeLists.txt  Dockerfile  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
sprint1/problems/map_json/precode/: CMakeLists.txt
sprint1/problems/map_json/solution/: Dockerfile  conanfile.txt
sprint1/problems/restaurant_single_threaded/solution/: CMakeLists.txt
sprint1/problems/seabattle/solution/: CMakeLists.txt
sprint1/problems/seabattle/solution/src/: main.cpp
sprint1/problems/sum/precode/: main.cpp
sprint1/problems/sum/solution/: CMakeLists.txt  main.cpp
sprint1/problems/sync_server/solution/: CMakeLists.txt  conanfile.txt
sprint1/samples/tcp-udp/: CMakeLists.txt  conanfile.txt  tcp_client.cpp  tcp_server.cpp  udp_client.cpp  udp_server.cpp
sprint2/problems/join_game/solution/: conanfile.txt
sprint2/problems/logger/solution/: conanfile.txt  my_logger.h
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint2/problems/static_content/solution/: CMakeLists.txt
sprint2/problems/time_control/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/time_control/solution/src/: objects.h  request_handler.h
sprint2_solution/src/: http_server.h  json_loader.h  request_handler.h
sprint3/problems/ammo/solution/: ammo.txt  load.yaml
sprint3/problems/final_task/solution/: Dockerfile
sprint3/problems/find_return/solution/: CMakeLists.txt
sprint3/problems/find_return/solution/src/: extra_data.cpp  model.h  objects.h  request_handler.h
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gather-tests/solution/: Dockerfile
sprint3/problems/gen_objects/solution/: CMakeLists.txt  conanfile.txt
sprint3/problems/instrumentation/solution/: event2dot
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt
sprint4/problems/db_of_books/solution/: CMakeLists.txt  conanfile.txt  main.cpp
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint4/problems/state_serialization/solution/: CMakeLists.txt  conanfile.txt
(+121 files in other folders)
